[package]
name = "beheader-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "beheader"
path = "src/lib.rs"

[[bin]]
name = "beheader"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png", "bmp", "gif", "jpeg", "webp", "tiff"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
byteorder = "1"
scopeguard = "1"
base64 = "0.22"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
