[package]
name = "beheader-rs"
version = "0.3.2"
edition = "2021"
description = "A polyglot generator for media files - Rust port of beheader"
license = "GPL-3.0"
repository = "https://github.com/rightester/beheader-rs"
readme = "README.md"
keywords = ["polyglot", "media", "png", "mp4", "file-format"]
categories = ["command-line-utilities", "multimedia", "encoding"]

[lib]
name = "beheader"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "beheader-bin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png", "bmp", "gif", "jpeg", "webp", "tiff"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
byteorder = "1"
scopeguard = "1"
base64 = "0.22"
shell-words = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
